--- a/Domashno_4/Microservices_Backend_Spring_Boot_Application/city/pom.xml
+++ b/Domashno_4/Microservices_Backend_Spring_Boot_Application/city/pom.xml
@@ -12,7 +12,16 @@
     <artifactId>city</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
 </project>
